--- a/.prettierignore
+++ b/.prettierignore
@@ -10,13 +10,13 @@ composer.patches.json
 .size-snapshot.json
 
 # Drupal
-/web/sites
-/web/core
-/web/modules/contrib
-/web/themes/contrib
-/web/profiles/contrib
-/web/libraries
-/web/README.md
+/app/sites
+/app/core
+/app/modules/contrib
+/app/themes/contrib
+/app/profiles/contrib
+/app/libraries
+/app/README.md
 
 # Build
-/web/storybook
+/app/storybook
